--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+/* Rirocrda
+1) Aggiungere padding fra le foto
+
+*/
+
 *{
   box-sizing: border-box;
   margin: 0;
@@ -15,7 +20,7 @@
 /* Container di tutte le città */
 .container-all-cities{
   width: 100vw; /* All screen */
-  padding:20px;
+  /* padding: 20px 0px; */
   /* border: 1px solid red; */
   background-color: orange;
 }
@@ -24,14 +29,16 @@
 
 /* Container città generica */
 .container-city{
+  position: relative;
   width: 100%; /* prendi altezza di container padre */
   /* border: 1px solid orange; */
 }
 /* /Container città generica */
 
 .img-city{
-  width: 40vw; /*Sottraggo padding al valore di larghezza */
-  border: 1px solid blue;
+  width: 100%; /*Sottraggo padding al valore di larghezza */
+  background-size: contain;
+  /* border: 1px solid blue; */
 
 }
 
@@ -52,12 +59,34 @@
 /* ##### UTILITIES ##### */
 
 .badge{
+  position: absolute;
+  top: 50%;
+  left:50%;
+  transform: translate(-50%,-50%);
+  width: 80%;
+  border-radius: 20px;
+  font-size: 72px;
+  font-weight: bold;
+  text-align: center;
+  color:white;
+  /* background-color: black; */
+  /* opacity: 65%; */
+
 
 }
 
-.layer-trasparent{
-
+/* Layer trasparente sull'immagine */
+.layer-transparent{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top:0;
+  left:0;
+  background-color: black;
+  opacity:80%;
+  border: 10px solid violet;
 }
+/* /Layer trasparente sull'immagine */
 
 
 
