--- a/css/style.css
+++ b/css/style.css
@@ -11,17 +11,17 @@
 
 /* Contenitore di tutto il sito */
 
-.container-content{
+/* Container eliminato perchè crea problemi di larghezza */
+/* .container-content{
   width: 100vw;
 
-}
+} */
 /* /Contenitore di tutto il sito */
 
 
 /* Container di tutte le città */
 .container-all-cities{
   width: 100%; /* Prendi dimensioni dal padre */
-  /* padding: 20px 0px; */
   /* border: 1px solid red; */
   background-color: orange;
 }
@@ -61,17 +61,19 @@
 
 .badge{
   position: absolute;
+  z-index: 2; /* nota: Funziona solo con position != da static */
   top: 50%;
   left:50%;
   transform: translate(-50%,-50%);
-  width: 80%;
+  /* width: 80%; */
+  padding: 0 20px;
   border-radius: 20px;
   font-size: 72px;
   font-weight: bold;
   text-align: center;
   color:white;
-  /* background-color: black; */
-  /* opacity: 65%; */
+  background-color: black;
+  opacity: 65%;
 
 
 }
@@ -84,10 +86,17 @@
   top:0;
   left:0;
   background-color: black;
-  opacity:80%;
+  color:white;
+  opacity:50%;
   /* border: 10px solid violet; */
 }
+
+.layer-transparent:hover{
+  opacity:20%;
+}
 /* /Layer trasparente sull'immagine */
+
+
 
 
 
