--- a/css/style-bonus.css
+++ b/css/style-bonus.css
@@ -1,12 +1,37 @@
 
-/* Differenze con esercizio standard
-1) Rullino foto anzichè immagini fullscreen */
-
 *{
   /* Inizializza box, margini e padding */
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+
+
+
+/* Navigation bar */
+.navbar{
+  width: 100%;
+  margin: 0 auto;
+  /* border: 1px solid green; */
+  text-align: center;
+}
+/* Reset stile ul*/
+.navbar ul{
+  /* Reset stile ul*/
+  list-style: none;
+}
+
+.navbar li{
+  display: inline-block;
+  border-bottom: 3px solid black;
+  line-height: 35px;
+}
+
+.navbar li:hover{
+  color: rgb(0,155,100);
+  text-shadow: 3px 3px rgba(0,0,0,0.1);
+  border-color: rgb(0,155,100);
 }
 
 /* Contenitore di tutto il sito */
@@ -17,19 +42,38 @@
 /* /Contenitore di tutto il sito */
 
 .header-block{
+  position: fixed;
+  z-index: 1001;
   width: 100%;
-  height: 200px;
-  border: 5px solid red;
-  border-radius: 15px;
+  height: 50px;
+  top: 0;
+  left:50%;
+  transform: translate(-50%,0%);
+  margin: 0 auto;
+
+  background-color: rgba(255,255,255,0.9);
+  /* Bordo */
+  border-bottom: 2px solid black;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  /* Ombreggiatura */
+  box-shadow: 2px 2px rgba(255,0,0,0.8);
+
+}
+
+.header-placeholder{
+  width:100%;
+  height: 40px; /* Mettere la stessa altezza di header - margine dall'alto di default */
 }
 
 
 /* Container di tutte le città */
 .container-all-cities{
   width: 20%; /* Prendi dimensioni dal padre */
-  background-color: red;
+  background-color: rgba(255,0,0,0.8);
   padding: 20px;
   border-radius: 15px;
+  border: 2px solid black;
   display: inline-block;
 }
 /* Container di tutte le città */
@@ -67,7 +111,7 @@
   background-image: url(../img/roma.jpg);
   background-size: cover;
   display: inline-block;
-  border: 5px solid red;
+  border: 2px solid black;
   border-radius: 15px;
 }
 /* /Città selezionata */
@@ -123,9 +167,12 @@
 
 .footer-block{
   width: 100%;
-  height: 100px;
-  border: 5px solid red;
+  height: 500px; /* Serve a provare scroll */
+  border-top: 1px solid rgba(0,0,0,0.5);
+  border-left: 1px solid rgba(0,0,0,0.5);
+  border-bottom: 2px solid rgba(0,0,0,1);
   border-radius: 15px;
+  box-shadow: 2px 2px rgba(255,0,0,1);
 }
 
 /* ##### /UTILITIES ##### */
